@@ -173,7 +173,7 @@ extern "C"
 	// Function Exports
 
 	// initialization
-	NS_EXPORT_(void) gluezilla_debug_startup ();
+	NS_EXPORT_(void) gluezilla_debug (int signal);
 	
 	NS_EXPORT_(Handle *) gluezilla_init (Platform platform, CallbackBin *events, const char * startDir, const char * dataDir, Platform * mozPlatform);
 	NS_EXPORT_(int) gluezilla_createBrowserWindow (Handle *instance, Handle *hwnd, PRInt32 width, PRInt32 height);
